--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "backstop test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "backstopjs": "^3.2.16"
+    "backstopjs": "^3.2.16",
+    "express": "^4.16.3"
   }
 }
